--- a/HaSharedLirary/GUI/ChangeableTextBox.xaml
+++ b/HaSharedLirary/GUI/ChangeableTextBox.xaml
@@ -1,9 +1,8 @@
-﻿<UserControl x:Class="HaRepacker.GUI.Panels.SubPanels.ChangeableTextBox"
+﻿<UserControl x:Class="HaSharedLirary.GUI.ChangeableTextBox"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:HaRepacker.GUI.Panels.SubPanels"
              mc:Ignorable="d" 
              Height="35"
              d:DesignHeight="40" d:DesignWidth="570">
