--- a/HaSharedLirary/GUI/SoundPlayer.xaml
+++ b/HaSharedLirary/GUI/SoundPlayer.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="HaRepacker.GUI.Panels.SubPanels.SoundPlayer"
+﻿<UserControl x:Class="HaSharedLirary.GUI.SoundPlayer"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
