--- a/HaCreator/MapEditor/MultiBoard.xaml
+++ b/HaCreator/MapEditor/MultiBoard.xaml
@@ -12,7 +12,16 @@
    
     <Grid>
         <WindowsFormsHost Margin="0,0,20,20">
-            <haCreator:DirectXHolder x:Name="DxContainer"/>
+            <haCreator:DirectXHolder x:Name="DxContainer"
+                                     DragEnter="DxContainer_DragEnter"
+                                     DragDrop="DxContainer_DragDrop"
+                                     KeyDown="DxContainer_KeyDown"
+                                     MouseClick="DxContainer_MouseClick"
+                                     MouseDoubleClick="DxContainer_MouseDoubleClick"
+                                     MouseDown="DxContainer_MouseDown"
+                                     MouseMove="DxContainer_MouseMove"
+                                     MouseUp="DxContainer_MouseUp"
+                                     />
         </WindowsFormsHost>
 
         <ScrollBar x:Name="vScrollBar" HorizontalAlignment="Right"
