--- a/HaRepacker/GUI/Panels/MainPanel.xaml
+++ b/HaRepacker/GUI/Panels/MainPanel.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:HaRepacker"
-             xmlns:sharedLib="clr-namespace:HaSharedLirary.GUI;assembly=HaSharedLirary"
+             xmlns:sharedLib="clr-namespace:HaSharedLibrary.GUI;assembly=HaSharedLibrary"
               xmlns:localgui ="clr-namespace:HaRepacker.GUI"
              xmlns:localSubPanels ="clr-namespace:HaRepacker.GUI.Panels.SubPanels"
              xmlns:wf="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"  
