[HaCreator] Rendering spine object & backgrounds on map simulator.
to test:
450005400
940200218
970072000

450012440
Limina/ Limen - End of the world

Moonbridge -
last horizon, etc

Tenebris : Ladyrinth of suffering

450001250
Cave of Rest : Spray Waterfall

there are still issues with render position.

--- a/HaCreator/GUI/HaRibbon.xaml
+++ b/HaCreator/GUI/HaRibbon.xaml
@@ -205,7 +205,7 @@
             <StackPanel Orientation="Horizontal" Margin="0,0,10,0">
                 <TextBlock Text="Selected Item:" Margin="0,0,20,0"/>
                 <TextBlock x:Name="itemDesc" Text="0"
-                           MaxWidth="120"/>
+                           MaxWidth="120" TextWrapping="WrapWithOverflow"/>
             </StackPanel>
         </StackPanel>
     </Grid>
