--- a/HaCreator/GUI/HaRibbon.xaml
+++ b/HaCreator/GUI/HaRibbon.xaml
@@ -6,7 +6,6 @@
              xmlns:cc="clr-namespace:HaCreator.CustomControls"
              xmlns:ns="clr-namespace:HaCreator.GUI"
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
-             
              >
     <Grid>
         <Ribbon x:Name="ribbon" Loaded="Ribbon_Loaded" Focusable="False">
@@ -203,7 +202,7 @@
             </StackPanel>
 
             <StackPanel Orientation="Horizontal" Margin="0,0,10,0">
-                <TextBlock Text="Selected Item:" Margin="0,0,20,0"/>
+                <TextBlock Text="Item:" Margin="0,0,20,0"/>
                 <TextBlock x:Name="itemDesc" Text="0"
                            MaxWidth="120" TextWrapping="WrapWithOverflow"/>
             </StackPanel>
