--- a/HaCreator/GUI/HaRibbon.xaml
+++ b/HaCreator/GUI/HaRibbon.xaml
@@ -8,7 +8,8 @@
              xmlns:sys="clr-namespace:System;assembly=mscorlib"
              >
     <Grid>
-        <Ribbon x:Name="ribbon" Loaded="Ribbon_Loaded" Focusable="False">
+        <Ribbon x:Name="ribbon" Loaded="Ribbon_Loaded" Focusable="False" Background="White" 
+                BorderBrush="#FFC6CCD3">
             <Ribbon.CommandBindings>
                 <CommandBinding Command="ns:HaRibbon.New" CanExecute="AlwaysExecute" Executed="New_Executed" />
                 <CommandBinding Command="ns:HaRibbon.Open" CanExecute="AlwaysExecute" Executed="Open_Executed" />
@@ -41,12 +42,12 @@
 
             <Ribbon.ApplicationMenu>
                 <RibbonApplicationMenu KeyTip="M" Focusable="False">
-                    <RibbonApplicationMenuItem x:Name="newBtn" Header="New..." Command="ns:HaRibbon.New" ImageSource="pack://application:,,,/HaCreator;component/Images/new_icon.png" KeyTip="N" Focusable="False"/>
-                    <RibbonApplicationMenuItem x:Name="openBtn" Header="Open..." Command="ns:HaRibbon.Open" ImageSource="pack://application:,,,/HaCreator;component/Images/Folder.png" KeyTip="O" Focusable="False"/>
-                    <RibbonApplicationMenuItem x:Name="exportBtn" Header="Save..." Command="ns:HaRibbon.Export" ImageSource="pack://application:,,,/HaCreator;component/Images/Save.png" KeyTip="S" Focusable="False"/>
+                    <RibbonApplicationMenuItem x:Name="newBtn" Header="New" Command="ns:HaRibbon.New" ImageSource="pack://application:,,,/HaCreator;component/Images/new_icon.png" KeyTip="N" Focusable="False"/>
+                    <RibbonApplicationMenuItem x:Name="openBtn" Header="Open map" Command="ns:HaRibbon.Open" ImageSource="pack://application:,,,/HaCreator;component/Images/Folder.png" KeyTip="O" Focusable="False"/>
+                    <RibbonApplicationMenuItem x:Name="exportBtn" Header="Save map" Command="ns:HaRibbon.Export" ImageSource="pack://application:,,,/HaCreator;component/Images/Save.png" KeyTip="S" Focusable="False"/>
                     <RibbonSeparator/>
-                    <RibbonApplicationMenuItem x:Name="saveBtn" Header="Save to WZ..." Command="ns:HaRibbon.Save" ImageSource="pack://application:,,,/HaCreator;component/Images/export-icon.png" Focusable="False"/>
-                    <RibbonApplicationMenuItem x:Name="repackBtn" Header="Repack WZ Files..." Command="ns:HaRibbon.Repack" ImageSource="pack://application:,,,/HaCreator;component/Images/wz.ico" Focusable="False"/>
+                    <RibbonApplicationMenuItem x:Name="saveBtn" Header="Save to WZ" Command="ns:HaRibbon.Save" ImageSource="pack://application:,,,/HaCreator;component/Images/export-icon.png" Focusable="False"/>
+                    <RibbonApplicationMenuItem x:Name="repackBtn" Header="Repack WZ Files" Command="ns:HaRibbon.Repack" ImageSource="pack://application:,,,/HaCreator;component/Images/wz.ico" Focusable="False"/>
                     <RibbonSeparator/>
                     <RibbonApplicationMenuItem x:Name="hrBtn" Header="Open HaRepacker" Command="ns:HaRibbon.HaRepacker" ImageSource="pack://application:,,,/HaCreator;component/Images/HaLogo32.png" Focusable="False"
                                                IsEnabled="False"/>
