--- a/HaCreator/MapEditor/MultiBoard.xaml
+++ b/HaCreator/MapEditor/MultiBoard.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:HaCreator.MapEditor"
-             xmlns:haCreator="clr-namespace:HaCreator"
+             xmlns:customControls="clr-namespace:HaCreator.CustomControls"
              
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="800">
@@ -12,7 +12,7 @@
    
     <Grid>
         <WindowsFormsHost x:Name="winFormDXHolder" Margin="0,0,20,20" Visibility="Collapsed">
-            <haCreator:DirectXHolder x:Name="DxContainer" 
+            <customControls:DirectXHolder x:Name="DxContainer" 
                                      DragEnter="DxContainer_DragEnter"
                                      DragDrop="DxContainer_DragDrop"
                                      KeyDown="DxContainer_KeyDown"
