[HaCreator] Scrolling map multiboard horizontally with the mouse wheel

--- a/HaCreator/MapEditor/MultiBoard.xaml
+++ b/HaCreator/MapEditor/MultiBoard.xaml
@@ -21,6 +21,7 @@
                                      MouseDown="DxContainer_MouseDown"
                                      MouseMove="DxContainer_MouseMove"
                                      MouseUp="DxContainer_MouseUp"
+                                          MouseWheel="DxContainer_MouseWheel"
                                      />
         </WindowsFormsHost>
 
